--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -9,6 +9,9 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4",
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "name": "backend",
   "version": "1.0.0",
